chore: add state for zth active behaviour

--- a/src/components/table/cells/z-th/styles.css
+++ b/src/components/table/cells/z-th/styles.css
@@ -49,6 +49,7 @@
   content: "";
 }
 
-.z-th--sort-button:focus:focus-visible::after {
+.z-th--sort-button:focus:focus-visible::after,
+.z-th--sort-button--active::after {
   box-shadow: var(--shadow-focus-primary);
 }
