--- a/src/components/z-menu/styles.css
+++ b/src/components/z-menu/styles.css
@@ -141,7 +141,7 @@ when placed below the real text using `flex-direction: column`. */
 
 .menu-label .menu-label-content z-icon {
   margin-left: calc(var(--space-unit) * 1.5);
-  fill: currentcolor;
+  fill: var(--color-default-icon);
 }
 
 .content {
@@ -210,7 +210,7 @@ when placed below the real text using `flex-direction: column`. */
   border-bottom: var(--border-size-small) solid var(--color-surface03);
 }
 
-:host(:not([vertical-context])) .items > ::slotted([slot="item"]:not(z-menu-section):last-of-type) {
+:host(:not([vertical-context])) .items > ::slotted([slot="item"]:last-child) {
   border-bottom: 0;
 }
 
