--- a/src/components/z-offcanvas/styles.css
+++ b/src/components/z-offcanvas/styles.css
@@ -1,6 +1,6 @@
 :host {
-  --z-offcanvas--container-width: 375px;
-  --z-offcanvas--top-space: 0;
+  --z-offcanvas--container-width: ;
+  --z-offcanvas--top-space: ;
 
   min-width: 100%;
   height: 100%;
@@ -34,12 +34,12 @@
 :host([variant="overlay"]) {
   position: fixed;
   z-index: 1000;
-  top: var(--z-offcanvas--top-space);
+  top: var(--z-offcanvas--top-space, 0);
   right: 0;
   bottom: 0;
   left: 0;
   display: flex;
-  height: calc(100% - var(--z-offcanvas--top-space));
+  height: calc(100% - var(--z-offcanvas--top-space, 0));
 }
 
 :host([variant="overlay"][transitiondirection="left"]) {
