feat!: update default theme tokens

--- a/src/tokens/themes/default.css
+++ b/src/tokens/themes/default.css
@@ -4,9 +4,9 @@
   --color-primary01: var(--blue500);
   --color-primary02: var(--blue25);
   --color-primary03: var(--blue50);
-  --color-secondary01: var(--blue500);
-  --color-secondary02: var(--red500);
-  --color-secondary03: var(--red500);
+  --color-secondary01: var(--red500);
+  --color-secondary02: var(--red25);
+  --color-secondary03: var(--red50);
   --color-danger01: var(--red500);
   --color-danger02: var(--red500);
   --color-error01: var(--red500);
@@ -22,10 +22,10 @@
   --color-text-warning: var(--color-warning-default);
   --color-warning-inverse: var(--yellow50);
   --color-surface01: var(--color-white);
-  --color-surface02: var(--gray50);
-  --color-surface03: var(--gray200);
+  --color-surface02: var(--gray100);
+  --color-surface03: var(--gray300);
   --color-surface04: var(--gray700);
-  --color-surface05: var(--gray800);
+  --color-surface05: var(--gray900);
   --color-default-text: var(--gray900);
   --color-text02: var(--gray100);
   --color-text03: var(--gray300);
@@ -45,7 +45,7 @@
   --color-input-field02: var(--blue500);
   --color-hover-primary: var(--blue800);
   --color-hover-primary-text: var(--color-black);
-  --color-hover-secondary: var(--blue800);
+  --color-hover-secondary: var(--red800);
   --color-hover-tertiary: var(--blue800);
   --color-hover-surface: var(--gray50);
   --color-hover-light: var(--blue400);
@@ -54,13 +54,11 @@
   --color-hover-success: var(--green700);
   --color-hover-warning: var(--yellow700);
   --color-active-primary: var(--blue800);
-  --color-active-secondary: var(--blue800);
+  --color-active-secondary: var(--red400);
   --color-active-tertiary: var(--blue800);
-  --color-active-surface: var(--gray300);
   --color-active-light: var(--blue400);
   --color-pressed-primary: var(--blue400);
   --color-pressed-secondary: var(--red400);
-  --color-selected-surface: var(--gray300);
   --color-selected-light: var(--gray300);
   --color-highlight: var(--blue400);
   --color-ghost01: var(--gray300);
