--- a/src/snowflakes/myz/card/z-myz-card-alert/styles.css
+++ b/src/snowflakes/myz/card/z-myz-card-alert/styles.css
@@ -28,7 +28,7 @@
 }
 
 .alert-external-wrapper.remove-alert {
-  border: var(--border-size-medium) solid var(--color-surface02);
+  border: var(--border-size-medium) solid var(--color-background);
   border-top: none;
 }
 
