--- a/src/snowflakes/myz/card/z-myz-card/styles.css
+++ b/src/snowflakes/myz/card/z-myz-card/styles.css
@@ -23,7 +23,7 @@ div.temp {
 
 /* HIDDEN status */
 div.faded {
-  border: var(--border-size-medium) solid var(--color-surface02);
+  border: var(--border-size-medium) solid var(--color-background);
 }
 
 /* HIGHLIGHTED status */
