--- a/src/components/file-upload/z-dragdrop-area/styles.css
+++ b/src/components/file-upload/z-dragdrop-area/styles.css
@@ -10,7 +10,7 @@
   flex-direction: column;
   padding: calc(var(--space-unit) * 2);
   border-color: var(--color-surface04);
-  background-color: var(--color-surface02);
+  background-color: var(--color-background);
 
   /* Native CSS properties don't support the customization of border-style.
   Therefore, we use a trick with an SVG image inside background-image property.
