--- a/src/components/table/z-thead/styles.css
+++ b/src/components/table/z-thead/styles.css
@@ -4,7 +4,7 @@
   ); /* Needed to handle the border of the expand button cell */
 
   --z-table--cells-background: var(
-    --color-surface02
+    --color-background
   ); /* Needed to handle the background-color of the expand button cell */
 
   display: block;
