--- a/src/components/z-navigation-tabs/styles.css
+++ b/src/components/z-navigation-tabs/styles.css
@@ -138,7 +138,7 @@ z-navigation-tabs > nav > *:focus:focus-visible {
 }
 
 z-navigation-tabs > nav > :not([disabled]):hover {
-  background-color: var(--color-surface02);
+  background-color: var(--color-background);
 }
 
 z-navigation-tabs > nav > button[disabled] {
