--- a/src/components/z-offcanvas/index.stories.css
+++ b/src/components/z-offcanvas/index.stories.css
@@ -1,6 +1,8 @@
 #offcanvas-story-container {
   display: flex;
+  width: 100%;
   height: 100vh;
+  align-items: flex-start;
   background-color: var(--blue100);
 }
 
@@ -8,15 +10,9 @@
   justify-content: flex-end;
 }
 
-#offcanvas-boxes-container {
-  display: flex;
-  flex-wrap: wrap;
-  padding: calc(var(--space-unit) * 2);
-  gap: calc(var(--space-unit) * 2);
-}
-
-#offcanvas-boxes-container > div {
-  width: 150px;
-  height: 150px;
+.offcanvas-story-content {
+  width: 100%;
+  height: 70vh;
+  margin: calc(var(--space-unit) * 2);
   background-color: var(--yellow500);
 }
