--- a/src/components/z-offcanvas/styles.css
+++ b/src/components/z-offcanvas/styles.css
@@ -2,36 +2,22 @@
   --z-offcanvas--container-width: ;
   --z-offcanvas--top-space: ;
 
+  display: flex;
   min-width: 100%;
   height: 100%;
   font-family: var(--font-family-sans);
   font-weight: var(--font-rg);
 }
 
-.canvas-container {
-  display: flex;
-  overflow: -moz-scrollbars-none;
-  overflow: hidden;
-  min-width: 100%;
-  height: 100%;
-  flex-direction: column;
-  background: var(--color-surface01);
+:host([transitiondirection="left"]) {
+  justify-content: flex-end;
 }
 
-:host([variant="pushcontent"]) {
-  display: none;
+:host([transitiondirection="up"]) {
+  align-items: flex-end;
 }
 
-:host([open]) {
-  display: flex;
-  visibility: visible;
-}
-
-:host(:not([open])) {
-  visibility: hidden;
-}
-
-:host([variant="overlay"]) {
+:host([variant="overlay"], [transitiondirection="up"]) {
   position: fixed;
   z-index: 1000;
   top: var(--z-offcanvas--top-space, 0);
@@ -42,148 +28,112 @@
   height: calc(100% - var(--z-offcanvas--top-space, 0));
 }
 
-:host([variant="overlay"][transitiondirection="left"]) {
-  justify-content: end;
+.canvas-container {
+  display: flex;
+  overflow: hidden;
+  min-width: 100%;
+  height: 100%;
+  background: var(--color-surface01);
+  transition: transform 0.4s ease-out;
 }
 
-:host([variant="overlay"]) > .canvas-container {
-  z-index: 1010;
+:host([variant="overlay"], [transitiondirection="up"]) .canvas-container {
+  z-index: 1001;
 }
 
-:host([variant="overlay"]) .canvas-background {
+:host([transitiondirection="right"]) > .canvas-container {
+  transform: translateX(-100%);
+}
+
+:host([transitiondirection="left"]) > .canvas-container {
+  transform: translateX(100%);
+}
+
+/* only for transitiondirection left or right */
+:host([open]:not([transitiondirection="up"])) > .canvas-container {
+  transform: translateX(0);
+}
+
+:host([transitiondirection="up"]) > .canvas-container {
+  height: 90%;
+  border-top-left-radius: var(--border-radius);
+  border-top-right-radius: var(--border-radius);
+  transform: translateY(100%);
+}
+
+:host([open][transitiondirection="up"]) > .canvas-container {
+  transform: translateY(0);
+}
+
+:host([skip-transition]) > .canvas-container {
+  transition: none;
+}
+
+:host([variant="overlay"], [transitiondirection="up"]) > .canvas-background {
   position: absolute;
-  left: 0;
   width: 100%;
   height: 100%;
   background-color: var(--gray900);
+  inset: 0;
+  opacity: 0;
+  visibility: hidden;
+}
+
+:host([open][variant="overlay"], [open][transitiondirection="up"]) > .canvas-background {
   opacity: 0.7;
+  visibility: visible;
 }
 
 .canvas-container > .canvas-content {
-  overflow: auto;
+  overflow: hidden auto;
   flex: 1 auto;
   padding: 0 calc(var(--space-unit) * 2);
   margin: calc(var(--space-unit) * 2) calc(var(--space-unit) / 2) calc(var(--space-unit) * 2) 0;
-  overflow-x: hidden;
-}
-
-:host([variant="overlay"]) > .canvas-container > .canvas-content {
-  padding: 0 calc(var(--space-unit) * 2) calc(var(--space-unit) * 2) calc(var(--space-unit) * 2);
-  margin: calc(var(--space-unit) * 2) calc(var(--space-unit) / 2) 0 0;
 }
 
 /* Webkit Scrollbar */
 .canvas-container .canvas-content::-webkit-scrollbar {
-  width: 10px;
-  background: linear-gradient(to right, transparent 0 3px, var(--gray200) 3px 7px, transparent 7px 10px);
-  border-radius: var(--border-radius);
-}
-
-.canvas-container .canvas-content::-webkit-scrollbar-track {
-  background-color: transparent;
+  width: 6px;
+  background: linear-gradient(to right, transparent 0 1px, var(--gray200) 1px 5px, transparent 5px 6px);
 }
 
 .canvas-container .canvas-content::-webkit-scrollbar-thumb {
-  width: 10px;
   background-color: var(--color-primary01);
-  border-radius: var(--border-radius);
 }
 
 .canvas-container .canvas-content::-webkit-scrollbar-thumb:hover {
   background-color: var(--color-hover-primary);
 }
 
-/* Firefox */
-.canvas-container .canvas-content {
-  scrollbar-color: var(--color-primary01) transparent;
-}
-
-/* Mobile */
-@media only screen and (max-width: 767px) {
-  :host([open][transitiondirection="left"]:not(.skip-animation)) > .canvas-container {
-    animation: enter-right 0.4s ease-out;
-  }
-
-  :host([open][transitiondirection="right"]:not(.skip-animation)) > .canvas-container {
-    animation: enter-left 0.4s ease-out;
+/* Firefox scrollbar */
+@supports not selector(.canvas-content::-webkit-scrollbar-track) {
+  .canvas-container .canvas-content {
+    scrollbar-color: var(--color-primary01) transparent;
   }
 }
 
 /* Tablet / Desktop */
-@media only screen and (min-width: 768px) {
+@media (min-width: 768px) {
   :host {
     min-width: auto;
   }
 
   .canvas-container {
-    width: auto;
-    min-width: max(var(--z-offcanvas--container-width), 375px);
-    max-width: max(var(--z-offcanvas--container-width), 375px);
+    width: max(var(--z-offcanvas--container-width, 375px), 375px);
+    min-width: 375px;
     height: auto;
     min-height: calc(var(--space-unit) * 40);
   }
 
-  :host(:not([variant="overlay"])[open]:not(.skip-animation)) {
-    width: auto;
-    animation: grow 0.4s ease-out;
+  :host([transitiondirection="up"]) > .canvas-container {
+    width: 100%;
   }
-}
 
-/* ANIMATION */
-
-@keyframes grow {
-  from {
+  :host([variant="pushcontent"]:not([open])) > .canvas-container {
     width: 0;
+    min-width: 0;
+    transition:
+      min-width 0.4s ease-out,
+      width 0.4s ease-out;
   }
-
-  to {
-    width: max(var(--z-offcanvas--container-width), 375px);
-  }
-}
-
-@keyframes enter-left {
-  from {
-    transform: translateX(-100%);
-  }
-
-  to {
-    transform: translateX(0);
-  }
-}
-
-@keyframes enter-right {
-  from {
-    transform: translateX(100%);
-  }
-
-  to {
-    transform: translateX(0);
-  }
-}
-
-:host([open][variant="overlay"][transitiondirection="left"]:not(.skip-animation)) > .canvas-container {
-  animation: enter-right 0.4s ease-out;
-}
-
-:host([open][transitiondirection="right"]:not(.skip-animation)) > .canvas-container {
-  animation: enter-left 0.4s ease-out;
-}
-
-:host(:not([open])[variant="overlay"][transitiondirection="right"]) > .canvas-container {
-  transform: translateX(-100%);
-  transition:
-    visibility 0.4s ease-out,
-    transform 0.4s ease-out;
-}
-
-:host(:not([open])[variant="overlay"][transitiondirection="left"]) > .canvas-container {
-  transform: translateX(100%);
-  transition:
-    visibility 0.4s ease-out,
-    transform 0.4s ease-out;
-}
-
-:host(:not([open])[variant="overlay"]) .canvas-background {
-  transition: visibility 0.4s ease-out;
-  visibility: hidden;
 }
