--- a/src/components/z-offcanvas/index.stories.css
+++ b/src/components/z-offcanvas/index.stories.css
@@ -1,7 +1,7 @@
 #offcanvas-story-container {
   display: flex;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   align-items: flex-start;
   background-color: var(--blue100);
 }
@@ -23,7 +23,7 @@
 .offcanvas-story-content {
   display: flex;
   width: 100%;
-  height: 70vh;
+  height: 120vh;
   align-items: center;
   justify-content: center;
   margin: calc(var(--space-unit) * 2);
