--- a/src/components/z-offcanvas/styles.css
+++ b/src/components/z-offcanvas/styles.css
@@ -1,35 +1,14 @@
 :host {
   --z-offcanvas--container-width: ;
+  --z-offcanvas--container-height: ;
   --z-offcanvas--top-space: ;
 
-  width: 0;
-  min-width: 0;
-  height: 0;
   font-family: var(--font-family-sans);
   font-weight: var(--font-rg);
 }
 
-:host([transitiondirection="up"]) {
-  align-items: flex-end;
-}
-
-:host([variant="overlay"], [transitiondirection="up"]) {
-  position: fixed;
-  z-index: 1000;
-  top: var(--z-offcanvas--top-space, 0);
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-
-:host([open]) {
-  display: flex;
-  width: 100%;
-  min-width: 100%;
-  height: 100%;
-}
-
 .canvas-container {
+  z-index: 1001;
   display: flex;
   overflow: hidden;
   min-width: 100%;
@@ -38,8 +17,16 @@
   transition: transform 0.4s ease-out;
 }
 
-:host([variant="overlay"], [transitiondirection="up"]) .canvas-container {
-  z-index: 1001;
+:host > * {
+  position: fixed;
+  top: var(--z-offcanvas--top-space, 0);
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+:host([open]) > * {
+  height: calc(100% - var(--z-offcanvas--top-space, 0px));
 }
 
 :host([transitiondirection="right"]) > .canvas-container {
@@ -50,15 +37,15 @@
   transform: translateX(100%);
 }
 
-/* only for transitiondirection left or right */
-:host([open]:not([transitiondirection="up"])) > .canvas-container {
+:host([open][transitiondirection="right"]) > .canvas-container,
+:host([open][transitiondirection="left"]) > .canvas-container {
   transform: translateX(0);
 }
 
 :host([transitiondirection="up"]) > .canvas-container {
-  height: 90%;
-  border-top-left-radius: var(--border-radius);
-  border-top-right-radius: var(--border-radius);
+  top: auto;
+  bottom: 0;
+  height: var(--z-offcanvas--container-height, 90%);
   transform: translateY(100%);
 }
 
@@ -66,21 +53,35 @@
   transform: translateY(0);
 }
 
-:host([skip-transition]) > .canvas-container {
+:host([variant="pushcontent"]) {
+  display: contents;
+}
+
+:host([variant="pushcontent"]) > .canvas-container {
+  position: relative;
+  height: 100%;
+}
+
+:host([variant="pushcontent"]:not([open])) > .canvas-container {
+  width: 0;
+  min-width: 0;
+  transition: 0.4s ease-out;
+  transition-property: width, min-width;
+}
+
+:host([skip-animation]) > .canvas-container {
   transition: none;
 }
 
-:host([variant="overlay"], [transitiondirection="up"]) > .canvas-background {
-  position: absolute;
+.canvas-background {
+  z-index: 1000;
   display: none;
   width: 100%;
   height: 100%;
   background-color: var(--gray900);
-  inset: 0;
-  opacity: 0;
 }
 
-:host([open][variant="overlay"], [open][transitiondirection="up"]) > .canvas-background {
+:host([open]) > .canvas-background {
   display: block;
   opacity: 0.7;
 }
@@ -115,19 +116,6 @@
 
 /* Tablet / Desktop */
 @media (min-width: 768px) {
-  :host([open][variant="pushcontent"]) {
-    width: auto;
-    min-width: auto;
-  }
-
-  :host([variant="overlay"][open]) {
-    height: calc(100% - var(--z-offcanvas--top-space, 0));
-  }
-
-  :host([transitiondirection="left"]) {
-    justify-content: flex-end;
-  }
-
   .canvas-container {
     width: max(var(--z-offcanvas--container-width, 375px), 375px);
     min-width: 375px;
@@ -137,9 +125,13 @@
     width: 100%;
   }
 
-  :host([variant="pushcontent"]:not([open])) > .canvas-container {
-    transition:
-      min-width 0.4s ease-out,
-      width 0.4s ease-out;
+  :host([transitiondirection="right"]) > .canvas-container {
+    right: auto;
+    left: 0;
+  }
+
+  :host([transitiondirection="left"]) > .canvas-container {
+    right: 0;
+    left: auto;
   }
 }
