--- a/src/components/z-offcanvas/index.stories.css
+++ b/src/components/z-offcanvas/index.stories.css
@@ -2,7 +2,8 @@
   display: flex;
   width: 100%;
   height: 100%;
-  align-items: flex-start;
+  box-sizing: border-box;
+  padding: calc(var(--space-unit) * 2);
   background-color: var(--blue100);
 }
 
@@ -23,9 +24,14 @@
 .offcanvas-story-content {
   display: flex;
   width: 100%;
-  height: 120vh;
+  height: 100%;
+  min-height: 500px;
   align-items: center;
   justify-content: center;
-  margin: calc(var(--space-unit) * 2);
   background-color: var(--yellow500);
+}
+
+#offcanvas-story-container.pushcontent-story {
+  height: auto;
+  padding-left: 0;
 }
