--- a/src/components/z-offcanvas/index.stories.css
+++ b/src/components/z-offcanvas/index.stories.css
@@ -17,7 +17,8 @@
   cursor: pointer;
 }
 
-#offcanvas-story-container.offcanvas-left {
+#offcanvas-story-container.left {
+  flex-direction: row-reverse;
   justify-content: flex-end;
 }
 
@@ -32,6 +33,16 @@
 }
 
 #offcanvas-story-container.pushcontent-story {
-  height: auto;
+  padding-right: 0;
   padding-left: 0;
+}
+
+@media (max-width: 767px) {
+  #offcanvas-story-container.pushcontent-story z-offcanvas {
+    flex: none;
+  }
+
+  #offcanvas-story-container.pushcontent-story z-offcanvas[open] {
+    width: 100%;
+  }
 }
