--- a/src/components/z-offcanvas/styles.css
+++ b/src/components/z-offcanvas/styles.css
@@ -62,7 +62,9 @@
 :host([variant="pushcontent"]:not([open])) > .canvas-container {
   width: 0;
   min-width: 0;
-  transition: width 0.4s ease-out, min-width 0.4s ease-out;
+  transition:
+    width 0.4s ease-out,
+    min-width 0.4s ease-out;
 }
 
 :host([variant="pushcontent"][transitiondirection="left"]) > .canvas-container {
