feat: z-section-title css classes and tokens; typography stories

--- a/src/tokens/typography.css
+++ b/src/tokens/typography.css
@@ -27,40 +27,51 @@
   --font-size-15: 4.75rem; /* 76px */
   --font-size-16: 5.25rem; /* 84px */
   --font-size-17: 5.75rem; /* 92px */
+
+  /* cssprops to use with `font` shorthand property */
+  --z-section-title-1: var(--font-sb) var(--font-size-11) / 0.9166 var(--font-family-serif);
+  --z-section-title-2: var(--font-sb) var(--font-size-10) / 1.1904 var(--font-family-serif);
+  --z-section-title-3: var(--font-sb) var(--font-size-9) / 1.222 var(--font-family-serif);
+  --z-section-title-4: var(--font-sb) var(--font-size-8) / 1.25 var(--font-family-serif);
+  --z-section-title-5: var(--font-sb) var(--font-size-7) / 1.2857 var(--font-family-serif);
+  --z-section-title-6: var(--font-sb) var(--font-size-6) / 1.333 var(--font-family-serif);
 }
 
 /* Typography classes */
 .heading-1,
 .heading-1-sb,
 .heading-1-lt {
-  font-size: var(--font-size-8);
+  font-size: var(--font-size-7);
   font-weight: var(--font-rg);
-  letter-spacing: 0;
-  line-height: 1.25;
+  line-height: 1.28;
 }
 
 .heading-2,
 .heading-2-sb,
 .heading-2-lt {
-  font-size: var(--font-size-7);
+  font-size: var(--font-size-6);
   font-weight: var(--font-rg);
-  letter-spacing: 0;
-  line-height: 1.28;
+  line-height: 1.333;
 }
 
-@media (max-width: 1151px) {
+/* for desktop viewports */
+@media (min-width: 1152px) {
   .heading-1,
   .heading-1-sb,
   .heading-1-lt {
-    font-size: var(--font-size-7);
-    line-height: 1.28;
+    font-size: var(--font-size-8);
+    font-weight: var(--font-rg);
+    letter-spacing: 0;
+    line-height: 1.25;
   }
 
   .heading-2,
   .heading-2-sb,
   .heading-2-lt {
-    font-size: var(--font-size-6);
-    line-height: 1.333;
+    font-size: var(--font-size-7);
+    font-weight: var(--font-rg);
+    letter-spacing: 0;
+    line-height: 1.28;
   }
 }
 
@@ -177,4 +188,29 @@
 .interactive-3-sb,
 .helper-sb {
   font-weight: var(--font-sb);
+}
+
+/* section title */
+.z-section-title-1 {
+  font: var(--z-section-title-1);
+}
+
+.z-section-title-2 {
+  font: var(--z-section-title-2);
+}
+
+.z-section-title-3 {
+  font: var(--z-section-title-3);
+}
+
+.z-section-title-4 {
+  font: var(--z-section-title-4);
+}
+
+.z-section-title-5 {
+  font: var(--z-section-title-5);
+}
+
+.z-section-title-6 {
+  font: var(--z-section-title-6);
 }
