fix: transition timing function for closing pushcontent variant

--- a/src/components/z-offcanvas/styles.css
+++ b/src/components/z-offcanvas/styles.css
@@ -70,8 +70,9 @@
   width: 0;
   min-width: 0;
   transition:
-    width 0.4s ease-out,
-    min-width 0.4s ease-out;
+    width 0.4s step-end,
+    min-width 0.4s step-end,
+    transform 0.4s ease-out;
 }
 
 :host([variant="pushcontent"][transitiondirection="left"]) > .canvas-container {
