--- a/src/components/z-offcanvas/index.stories.css
+++ b/src/components/z-offcanvas/index.stories.css
@@ -27,14 +27,19 @@
   width: 100%;
   height: 100%;
   min-height: 500px;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--yellow500);
+  flex-direction: column;
+  padding: calc(var(--space-unit) * 2);
+  background-color: var(--color-background);
+  text-align: left;
 }
 
 #offcanvas-story-container.pushcontent-story {
   padding-right: 0;
   padding-left: 0;
+}
+
+#offcanvas-story-container.pushcontent-story z-offcanvas[open] + .offcanvas-story-content {
+  border-left: 1px solid var(--color-surface03);
 }
 
 @media (max-width: 767px) {
