refactor: remove transition for pushcontent variant; replace `inert` with a more compatible solution

--- a/src/components/z-offcanvas/styles.css
+++ b/src/components/z-offcanvas/styles.css
@@ -9,7 +9,6 @@
 
 :host([variant="pushcontent"]:not([transitiondirection="up"])) {
   overflow: hidden;
-  flex: none; /* Prevent unwanted width changes in flex containers */
 }
 
 .canvas-container {
@@ -66,19 +65,8 @@
   height: 100%;
 }
 
-:host([variant="pushcontent"]:not([open])) > .canvas-container {
-  width: 0;
-  min-width: 0;
-  transition:
-    width 0.4s step-end,
-    min-width 0.4s step-end,
-    transform 0.4s ease-out;
-}
-
-:host([variant="pushcontent"][transitiondirection="left"]) > .canvas-container {
-  /* the `width` transition is by default from right to left, which is the opposite of what we want it.
-  Setting the container to float to the right fixes it. */
-  float: right;
+:host([variant="pushcontent"]:not([open])) {
+  display: none;
 }
 
 :host([skip-animation]) > .canvas-container {
@@ -87,14 +75,14 @@
 
 .canvas-background {
   z-index: 1000;
-  display: none;
   width: 100%;
   height: 100%;
   background-color: var(--gray900);
+  opacity: 0;
+  transition: opacity 0.4s ease-out;
 }
 
 :host([open]) > .canvas-background {
-  display: block;
   opacity: 0.7;
 }
 
@@ -128,6 +116,10 @@
 
 /* Tablet / Desktop */
 @media (min-width: 768px) {
+  :host([variant="pushcontent"]:not([transitiondirection="up"])) {
+    flex: none; /* Prevent unwanted width changes in flex containers */
+  }
+
   .canvas-container {
     width: max(var(--z-offcanvas--container-width, 375px), 375px);
     min-width: 375px;
