--- a/src/components/z-offcanvas/styles.css
+++ b/src/components/z-offcanvas/styles.css
@@ -79,11 +79,13 @@
   height: 100%;
   background-color: var(--gray900);
   opacity: 0;
+  pointer-events: none;
   transition: opacity 0.4s ease-out;
 }
 
 :host([open]) > .canvas-background {
   opacity: 0.7;
+  pointer-events: unset;
 }
 
 .canvas-container > .canvas-content {
