--- a/src/components/file-upload/z-dragdrop-area/styles.css
+++ b/src/components/file-upload/z-dragdrop-area/styles.css
@@ -45,7 +45,7 @@
 
 :host > .dragdrop .dragover-container .dragover-message {
   padding: 10px 28px;
-  background-color: var(--color-text-link-blue);
+  background-color: var(--color-primary01);
   color: var(--color-text-inverse);
 }
 
