--- a/src/components/css-components/z-link/styles.css
+++ b/src/components/css-components/z-link/styles.css
@@ -14,6 +14,25 @@ button.z-link {
   text-decoration: none;
 }
 
+a.z-link.z-link-icon,
+button.z-link.z-link-icon {
+  --z-icon-width: 1.125em;
+  --z-icon-height: 1.125em;
+
+  align-items: center;
+  column-gap: 0.5em;
+}
+
+a.z-link.z-link-sb,
+button.z-link.z-link-sb {
+  font-weight: var(--font-sb);
+}
+
+a.z-link.z-link-underline,
+button.z-link.z-link-underline {
+  text-decoration: underline;
+}
+
 a.z-link:hover,
 button.z-link:hover,
 a.z-link:focus,
@@ -29,18 +48,6 @@ button.z-link:focus {
   outline: none;
 }
 
-a.z-link.z-link-active.z-link-inverse,
-button.z-link.z-link-active.z-link-inverse {
-  color: var(--color-text-link-inverse);
-  fill: var(--color-text-link-inverse);
-}
-
-a.z-link.z-link-active.z-link-black,
-button.z-link.z-link-active.z-link-black {
-  color: var(--color-black);
-  fill: var(--color-black);
-}
-
 a.z-link.z-link-disabled,
 button.z-link.z-link-disabled {
   box-shadow: none;
@@ -50,17 +57,6 @@ button.z-link.z-link-disabled {
   outline: none;
   pointer-events: none;
   text-decoration: none;
-}
-
-a.z-link.z-link-underline,
-button.z-link.z-link-underline {
-  text-decoration: underline;
-}
-
-a.z-link.z-link-inverse,
-button.z-link.z-link-inverse {
-  color: var(--color-text-link-inverse);
-  fill: var(--color-text-link-inverse);
 }
 
 a.z-link,
@@ -103,6 +99,12 @@ button.z-link.z-link-red {
   fill: var(--color-text-link-red);
 }
 
+a.z-link.z-link-inverse,
+button.z-link.z-link-inverse {
+  color: var(--color-text-link-inverse);
+  fill: var(--color-text-link-inverse);
+}
+
 a.z-link.z-link-blue.z-link-active,
 button.z-link.z-link-blue.z-link-active {
   color: var(--color-text-link-blue);
@@ -115,8 +117,8 @@ button.z-link.z-link-red.z-link-active {
   fill: var(--color-text-link-red);
 }
 
-a.z-link.z-link-inverse:hover,
-button.z-link.z-link-inverse:hover {
+a.z-link.z-link-inverse.z-link-active,
+button.z-link.z-link-inverse.z-link-active {
   color: var(--color-text-link-inverse);
   fill: var(--color-text-link-inverse);
 }
@@ -133,10 +135,8 @@ button.z-link.z-link-red:hover {
   fill: var(--color-text-link-red-hover);
 }
 
-a.z-link.z-link-inverse:active,
-button.z-link.z-link-inverse:active,
-a.z-link.z-link-inverse:focus,
-button.z-link.z-link-inverse:focus {
+a.z-link.z-link-inverse:hover,
+button.z-link.z-link-inverse:hover {
   color: var(--color-text-link-inverse);
   fill: var(--color-text-link-inverse);
 }
@@ -157,8 +157,10 @@ button.z-link.z-link-red:focus {
   fill: var(--color-text-link-red-active);
 }
 
-a.z-link.z-link-inverse:visited,
-button.z-link.z-link-inverse:visited {
+a.z-link.z-link-inverse:active,
+button.z-link.z-link-inverse:active,
+a.z-link.z-link-inverse:focus,
+button.z-link.z-link-inverse:focus {
   color: var(--color-text-link-inverse);
   fill: var(--color-text-link-inverse);
 }
@@ -175,62 +177,8 @@ button.z-link.z-link-red:visited {
   fill: var(--color-text-link-red-visited);
 }
 
-a.z-link.z-link-black,
-button.z-link.z-link-black {
-  color: var(--gray800);
-  fill: var(--gray800);
-}
-
-a.z-link.z-link-black:hover:visited,
-button.z-link.z-link-black:hover:visited {
-  color: var(--gray800);
-  fill: var(--gray800);
-}
-
-a.z-link.z-link-black:hover,
-button.z-link.z-link-black:hover,
-a.z-link.z-link-black.z-link-active:focus,
-button.z-link.z-link-black.z-link-active:focus {
-  color: var(--color-black);
-  fill: var(--color-black);
-}
-
-a.z-link.z-link-black:active,
-button.z-link.z-link-black:active,
-a.z-link.z-link-black.z-link-active:active,
-button.z-link.z-link-black.z-link-active:active {
-  color: var(--gray700);
-  fill: var(--gray700);
-}
-
-a.z-link.z-link-black.z-link-disabled.z-link-active,
-button.z-link.z-link-black.z-link-disabled.z-link-active {
-  color: var(--color-disabled03);
-  fill: var(--color-disabled03);
-}
-
-a.z-link.z-link-white,
-button.z-link.z-link-white {
-  color: var(--color-white);
-  fill: var(--color-white);
-}
-
-a.z-link.z-link-white.z-link-disabled,
-button.z-link.z-link-white.z-link-disabled {
-  color: var(--color-disabled03);
-  fill: var(--color-disabled03);
-}
-
-a.z-link.z-link-icon,
-button.z-link.z-link-icon {
-  --z-icon-width: 1.125em;
-  --z-icon-height: 1.125em;
-
-  align-items: center;
-  column-gap: 0.5em;
-}
-
-a.z-link.z-link-sb,
-button.z-link.z-link-sb {
-  font-weight: var(--font-sb);
+a.z-link.z-link-inverse:visited,
+button.z-link.z-link-inverse:visited {
+  color: var(--color-text-link-inverse);
+  fill: var(--color-text-link-inverse);
 }
